--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "extra": {
         "think": {
             "config": {
-                "obsclient": "src/config.php"
+                "obsclient": "src/obsclient/config.php"
             }
         }
     }
